--- a/correct4.html
+++ b/correct4.html
@@ -121,6 +121,6 @@
 <script type="text/javascript">
 var eTime =new Date();
 //    alert("任務完成時間："+ eTime.getHours()+':'+eTime.getMinutes()+':'+eTime.getSeconds());
-    var str = '<a href="../News/index.html">恭喜您完成任務，點我回首頁，時間：'+eTime.getHours()+':'+eTime.getMinutes()+':'+eTime.getSeconds() +'</a>'
+    var str = '<a href="../News/index4.html">恭喜您完成任務，點我回首頁，時間：'+eTime.getHours()+':'+eTime.getMinutes()+':'+eTime.getSeconds() +'</a>'
     $('#finishtime').html(str);    
 </script>
