--- a/index2_sport_nba.html
+++ b/index2_sport_nba.html
@@ -172,7 +172,7 @@
 				            <li class="hassubs"><a href="../News/index2_sport.html" style="font-weight: 600;color: #17a2b8;">體育<i class="fas fa-chevron-right"></i></a>
                                 <ul>
                                     <li><a href="shop.html">棒球<i class="fas fa-chevron-down"></i></a></li>
-                                    <li><a href="./index2_sport_nba.html">籃球<i class="fas fa-chevron-down"></i></a></li>
+                                    <li><a href="product.html">籃球<i class="fas fa-chevron-down"></i></a></li>
                                     <li><a href="blog.html">網球<i class="fas fa-chevron-down"></i></a></li>
                                     <li><a href="blog_single.html">高爾夫球<i class="fas fa-chevron-down"></i></a></li>
                                     <li><a href="regular.html">羽球<i class="fas fa-chevron-down"></i></a></li>
@@ -235,11 +235,11 @@
         </div>               
         <!-- Trends Slider -->
         <div  id="row_2" class="col-md-10">
-            <div class="trends">
+                        <div class="trends">
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp體育</a></div>
+                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="./index2_sport.html">&nbsp體育</a>><a href="./index2_sport_nba.html">籃球</a></div>
                     <div class="row" style="padding-top: 20px;">
                         <!-- Trends Slider -->
                         <div class="col-lg-12">
@@ -249,11 +249,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_50.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_55.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">體育/棒球</a></div>
+                                                <div class="trends_category"><a href="#">體育/籃球</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">追分時刻可惜了，宜蘭縣跑者遭牽制出局</a></div>
+                                                    <div class="trends_name"><a href="product.html">CBA／復賽在即！上海雙外援離開大陸</a></div>
                                                 </div>
                                             </div>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
@@ -262,11 +262,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_26.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_56.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">體育/網球</a></div>
+                                                <div class="trends_category"><a href="#">體育/籃球</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">網球防疫盃／單、雙都闖決賽 混血美少女收一冠一亞</a></div>
+                                                    <div class="trends_name"><a href="product.html">HBL女乙／竹商9連勝先晉四隊史瞄準首冠 小港爆冷輸內湖衛冕亮紅燈</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -279,11 +279,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_27.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_57.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">體育/棒球</a></div>
+                                                <div class="trends_category"><a href="#">體育/籃球</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">中職／索沙8局神封鎖 悍將痛擊兄弟</a></div>
+                                                    <div class="trends_name"><a href="product.html">解封／WSBL6月11日起開放進場 進場須戴口罩採實名制登記</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -318,11 +318,11 @@
                                     </div>
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_48.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_59.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">體育/網球</a></div>
+                                                <div class="trends_category"><a href="#">體育/籃球</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">頭號種子曾俊欣晉級八強 劉少凡國體內戰勝李冠毅</a></div>
+                                                    <div class="trends_name"><a href="product.html">HBL男乙／高師附中蔣岱佑末節逆襲衛冕軍東中 竹林興華新化同捷</a></div>
                                                 </div>
                                             </div>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
@@ -330,11 +330,11 @@
                                     </div>
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_49.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_58.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">體育/棒球</a></div>
+                                                <div class="trends_category"><a href="#">體育/籃球</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">中職／獅隊本季首度有投手投滿7局 林岳平盼洋投也能有所發揮</a></div>
+                                                    <div class="trends_name"><a href="product.html">HBL乙級／小港三分雨淋南商輕闖衛冕頭關 黑馬竹商能仁龍津同日傳捷</a></div>
                                                 </div>
                                             </div>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
@@ -346,9 +346,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-    
-   
+        </div>    
     </div>
 
     <!-- Copyright -->
