--- a/index3_art.html
+++ b/index3_art.html
@@ -194,7 +194,7 @@
 									<li class="hassubs"><a href="../News/index3_art.html" style="font-weight: 600;color: #17a2b8;">娛樂<i class="fas fa-chevron-down"></i></a>
                                         <ul>
 											<li><a href="shop.html">電影<i class="fas fa-chevron-down"></i></a></li>
-											<li><a href="product.html">影視名人<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="./index3_art_people.html">影視名人<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="blog.html">戲劇<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="blog_single.html">日韓<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="regular.html">歐美<i class="fas fa-chevron-down"></i></a></li>
