--- a/index3_sport.html
+++ b/index3_sport.html
@@ -175,7 +175,7 @@
 									</li>
 									<li class="hassubs"><a href="../News/index3_sport.html" style="font-weight: 600;color: #17a2b8;">體育<i class="fas fa-chevron-down"></i></a>                  <ul>
 											<li><a href="shop.html">棒球<i class="fas fa-chevron-down"></i></a></li>
-											<li><a href="product.html">籃球<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="./index3_sport_nba.html">籃球<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="blog.html">網球<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="blog_single.html">高爾夫球<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="regular.html">羽球<i class="fas fa-chevron-down"></i></a></li>
