--- a/index_art_people.html
+++ b/index_art_people.html
@@ -195,7 +195,7 @@
 									<li class="hassubs"><a href="../News/index_art.html" style="font-weight: 600;color: #17a2b8;">娛樂<i class="fas fa-chevron-down"></i></a>
                                         <ul>
 											<li><a href="shop.html">電影<i class="fas fa-chevron-down"></i></a></li>
-											<li><a href="./index_art_people.html">影視名人<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="product.html">影視名人<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="blog.html">戲劇<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="blog_single.html">日韓<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="regular.html">歐美<i class="fas fa-chevron-down"></i></a></li>
@@ -332,7 +332,7 @@
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp娛樂</a></div>
+                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="./index_art.html">&nbsp娛樂></a>影視名人<a href="./index_art_people.html"></a></div>
                     <div class="row" style="padding-top: 20px;">
                         <!-- Trends Slider -->
                         <div class="col-lg-12">
@@ -342,11 +342,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_13.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_60.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">娛樂/電影</a></div>
+                                                <div class="trends_category"><a href="#">娛樂/影視名人</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">十部只有受過傷才能真正看懂的經典老電影，讓你找回尋夢的勇氣</a></div>
+                                                    <div class="trends_name"><a href="product.html">隋棠遊蘭嶼慘暈船 同行驚見大咖女星</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -361,7 +361,7 @@
                                         <div class="trends_item">
                                             <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_29.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">娛樂/電影</a></div>
+                                                <div class="trends_category"><a href="#">娛樂/影視名人</a></div>
                                                 <div class="trends_info clearfix">
                                                     <div class="trends_name"><a href="product.html">廖明毅初試啼聲 以iPhone拍出超前部署防疫愛情電影</a></div>
                                                 </div>
@@ -378,7 +378,7 @@
                                         <div class="trends_item">
                                             <div class="trends_image d-flex flex-column align-items-center justify-content-center"><a href="./correct.html"><img src="images/yahoo/new_p_47.jpg" alt=""></a></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="./index_art.html">娛樂/電影</a></div>
+                                                <div class="trends_category"><a href="./index_art.html">娛樂/影視名人</a></div>
                                                 <div class="trends_info clearfix">
                                                     <div class="trends_name"><a href="./correct.html">侯孝賢獲紐時大篇幅介紹：台灣最偉大電影人</a></div>
                                                 </div>
@@ -405,7 +405,7 @@
                                         <div class="trends_item is_new">
                                             <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_34.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">娛樂/歐美</a></div>
+                                                <div class="trends_category"><a href="#">娛樂/影視名人</a></div>
                                                 <div class="trends_info clearfix">
                                                     <div class="trends_name"><a href="product.html">女神卡卡攜手亞莉安娜 新歌MV日破1600萬人次觀看</a></div>
                                                 </div>
@@ -427,11 +427,11 @@
                                     </div>
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_46.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_61.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">娛樂/電影</a></div>
+                                                <div class="trends_category"><a href="#">娛樂/影視名人</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">睽違29年影史上驚悚鉅作《沉默的羔羊》4K修復版重返大螢幕</a></div>
+                                                    <div class="trends_name"><a href="product.html">谷阿莫PO道歉啟事！5大片商全和解</a></div>
                                                 </div>
                                             </div>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
