--- a/index2_art_people.html
+++ b/index2_art_people.html
@@ -115,7 +115,7 @@
 				            <div class="cat_menu_text" ></div>
 						</div>
 				        <ul class="cat_menu">
-				            <li><a href="../News/index2.html">首頁<i class="fas fa-chevron-right ml-auto"></i></a></li>
+				            <li><a href="../News/index2.html" style="font-weight: 600;color: #17a2b8;">首頁<i class="fas fa-chevron-right ml-auto"></i></a></li>
                             <li class="hassubs">
 				                <a href="../News/index2_internation.html">國際<i class="fas fa-chevron-right"></i></a>
 				                <ul>
@@ -169,10 +169,10 @@
                                     <li><a href="regular.html">投資理財<i class="fas fa-chevron-down"></i></a></li>
 								</ul>
 				            </li>
-				            <li class="hassubs"><a href="../News/index2_sport.html" style="font-weight: 600;color: #17a2b8;">體育<i class="fas fa-chevron-right"></i></a>
+				            <li class="hassubs"><a href="../News/index2_sport.html">體育<i class="fas fa-chevron-right"></i></a>
                                 <ul>
                                     <li><a href="shop.html">棒球<i class="fas fa-chevron-down"></i></a></li>
-                                    <li><a href="./index2_sport_nba.html">籃球<i class="fas fa-chevron-down"></i></a></li>
+                                    <li><a href="product.html">籃球<i class="fas fa-chevron-down"></i></a></li>
                                     <li><a href="blog.html">網球<i class="fas fa-chevron-down"></i></a></li>
                                     <li><a href="blog_single.html">高爾夫球<i class="fas fa-chevron-down"></i></a></li>
                                     <li><a href="regular.html">羽球<i class="fas fa-chevron-down"></i></a></li>
@@ -187,7 +187,7 @@
                                     <li><a href="product.html">3C產品開箱<i class="fas fa-chevron-down"></i></a></li>
                                 </ul>        
                             </li>         
-				            <li class="hassubs"><a href="../News/index2_art.html">娛樂<i class="fas fa-chevron-right"></i></a>
+				            <li class="hassubs"><a href="../News/index2_art.html" style="font-weight: 600;color: #17a2b8;">娛樂<i class="fas fa-chevron-right"></i></a>
                                 <ul>
                                     <li><a href="shop.html">電影<i class="fas fa-chevron-down"></i></a></li>
                                     <li><a href="product.html">影視名人<i class="fas fa-chevron-down"></i></a></li>
@@ -239,7 +239,7 @@
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp體育</a></div>
+                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="./index2_art.html">&nbsp娛樂></a>影視名人<a href="./index2_art_people.html"></a></div>
                     <div class="row" style="padding-top: 20px;">
                         <!-- Trends Slider -->
                         <div class="col-lg-12">
@@ -249,24 +249,28 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_50.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_60.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">體育/棒球</a></div>
+                                                <div class="trends_category"><a href="#">娛樂/影視名人</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">追分時刻可惜了，宜蘭縣跑者遭牽制出局</a></div>
+                                                    <div class="trends_name"><a href="product.html">隋棠遊蘭嶼慘暈船 同行驚見大咖女星</a></div>
                                                 </div>
                                             </div>
+                                            <ul class="trends_marks">
+                                                <li class="trends_mark trends_discount">-25%</li>
+                                                <li class="trends_mark trends_new">HOT</li>
+                                            </ul>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
                                         </div>
                                     </div>
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_26.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_29.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">體育/網球</a></div>
+                                                <div class="trends_category"><a href="#">娛樂/影視名人</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">網球防疫盃／單、雙都闖決賽 混血美少女收一冠一亞</a></div>
+                                                    <div class="trends_name"><a href="product.html">廖明毅初試啼聲 以iPhone拍出超前部署防疫愛情電影</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -279,11 +283,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_27.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><a href="./correct2.html"><img src="images/yahoo/new_p_47.jpg" alt=""></a></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">體育/棒球</a></div>
+                                                <div class="trends_category"><a href="./index2_art.html">娛樂/影視名人</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">中職／索沙8局神封鎖 悍將痛擊兄弟</a></div>
+                                                    <div class="trends_name"><a href="./correct2.html">侯孝賢獲紐時大篇幅介紹：台灣最偉大電影人</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -306,35 +310,35 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><a href="./correct2.html"><img src="images/yahoo/new_p_28.jpg" alt=""></a></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_34.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="./index2_sport.html">體育/籃球</a></div>
+                                                <div class="trends_category"><a href="#">娛樂/影視名人</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="./correct2.html">NBA／坦承人生因喬丹而改變 柯爾：我欠他太多太多</a></div>
+                                                    <div class="trends_name"><a href="product.html">女神卡卡攜手亞莉安娜 新歌MV日破1600萬人次觀看</a></div>
                                                 </div>
                                             </div>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
                                         </div>
                                     </div>
                                     <div class="owl-item">
-                                        <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_48.jpg" alt=""></div>
+                                        <div class="trends_item is_new">
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_45.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">體育/網球</a></div>
+                                                <div class="trends_category"><a href="#">娛樂/影視名人</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">頭號種子曾俊欣晉級八強 劉少凡國體內戰勝李冠毅</a></div>
+                                                    <div class="trends_name"><a href="product.html">專訪／陳郁秀為貝多芬拾琴鍵 公廣集團董座的浪漫與理性</a></div>
                                                 </div>
                                             </div>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
                                         </div>
                                     </div>
                                     <div class="owl-item">
-                                        <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_49.jpg" alt=""></div>
+                                        <div class="trends_item is_new">
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_61.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">體育/棒球</a></div>
+                                                <div class="trends_category"><a href="#">娛樂/影視名人</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">中職／獅隊本季首度有投手投滿7局 林岳平盼洋投也能有所發揮</a></div>
+                                                    <div class="trends_name"><a href="product.html">谷阿莫PO道歉啟事！5大片商全和解</a></div>
                                                 </div>
                                             </div>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
@@ -343,12 +347,10 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>                   
                 </div>
             </div>
-        </div>
-    
-   
+        </div>    
     </div>
 
     <!-- Copyright -->
