--- a/index4_art.html
+++ b/index4_art.html
@@ -204,7 +204,7 @@
 				            <li class="hassubs"><a href="../News/index4_art.html" style="font-weight: 600;color: #17a2b8;">娛樂<i class="fas fa-chevron-right"></i></a>
                                 <ul>
                                     <li><a href="shop.html">電影<i class="fas fa-chevron-down"></i></a></li>
-                                    <li><a href="product.html">影視名人<i class="fas fa-chevron-down"></i></a></li>
+                                    <li><a href="index4_art_people.html">影視名人<i class="fas fa-chevron-down"></i></a></li>
                                     <li><a href="blog.html">戲劇<i class="fas fa-chevron-down"></i></a></li>
                                     <li><a href="blog_single.html">日韓<i class="fas fa-chevron-down"></i></a></li>
                                     <li><a href="regular.html">歐美<i class="fas fa-chevron-down"></i></a></li>
@@ -254,7 +254,7 @@
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                 <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp娛樂</a></div>
+                 <div class="advert_title" style="font-size: 14px;">目前位置：<a href="index4_art.html">&nbsp娛樂</a></div>
                     <div class="row" style="padding-top: 10px;">
                         <div class="adverts">
                             <div class="container">
