--- a/index_sport_nba.html
+++ b/index_sport_nba.html
@@ -174,7 +174,7 @@
 											<li><a href="regular.html">投資理財<i class="fas fa-chevron-down"></i></a></li>
 										</ul>
 									</li>
-									<li class="hassubs"><a href="../News/index_sport.html">體育<i class="fas fa-chevron-down"></i></a>                  
+									<li class="hassubs"><a href="../News/index_sport.html" style="font-weight: 600;color: #17a2b8;">體育<i class="fas fa-chevron-down"></i></a>                  
                                         <ul>
 											<li><a href="shop.html">棒球<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="product.html">籃球<i class="fas fa-chevron-down"></i></a></li>
@@ -192,10 +192,10 @@
 											<li><a href="product.html">3C產品開箱<i class="fas fa-chevron-down"></i></a></li>
                                         </ul>
                                     </li>         
-									<li class="hassubs"><a href="../News/index_art.html" style="font-weight: 600;color: #17a2b8;">娛樂<i class="fas fa-chevron-down"></i></a>
+									<li class="hassubs"><a href="../News/index_art.html">娛樂<i class="fas fa-chevron-down"></i></a>
                                         <ul>
 											<li><a href="shop.html">電影<i class="fas fa-chevron-down"></i></a></li>
-											<li><a href="./index_art_people.html">影視名人<i class="fas fa-chevron-down"></i></a></li>
+											<li><a href="product.html">影視名人<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="blog.html">戲劇<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="blog_single.html">日韓<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="regular.html">歐美<i class="fas fa-chevron-down"></i></a></li>
@@ -210,7 +210,7 @@
 											<li><a href="regular.html">憂鬱症<i class="fas fa-chevron-down"></i></a></li>
                                         </ul>
                                     </li>
-                                    <li class="hassubs"><a href="../News/index_life.html">生活<i class="fas fa-chevron-down"></i></a>
+                                    <li class="hassubs"><a href="../News/index_life.htmll">生活<i class="fas fa-chevron-down"></i></a>
                                         <ul>
 											<li><a href="shop.html">交通旅遊<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="product.html">美食餐廳<i class="fas fa-chevron-down"></i></a></li>
@@ -332,7 +332,7 @@
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp娛樂</a></div>
+                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="./index_sport.html">&nbsp體育</a>><a href="./index_sport_nba.html">籃球</a></div>
                     <div class="row" style="padding-top: 20px;">
                         <!-- Trends Slider -->
                         <div class="col-lg-12">
@@ -342,28 +342,24 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_13.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_55.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">娛樂/電影</a></div>
+                                                <div class="trends_category"><a href="#">體育/籃球</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">十部只有受過傷才能真正看懂的經典老電影，讓你找回尋夢的勇氣</a></div>
+                                                    <div class="trends_name"><a href="product.html">CBA／復賽在即！上海雙外援離開大陸</a></div>
                                                 </div>
                                             </div>
-                                            <ul class="trends_marks">
-                                                <li class="trends_mark trends_discount">-25%</li>
-                                                <li class="trends_mark trends_new">HOT</li>
-                                            </ul>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
                                         </div>
                                     </div>
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_29.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_56.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">娛樂/電影</a></div>
+                                                <div class="trends_category"><a href="#">體育/籃球</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">廖明毅初試啼聲 以iPhone拍出超前部署防疫愛情電影</a></div>
+                                                    <div class="trends_name"><a href="product.html">HBL女乙／竹商9連勝先晉四隊史瞄準首冠 小港爆冷輸內湖衛冕亮紅燈</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -376,11 +372,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><a href="./correct.html"><img src="images/yahoo/new_p_47.jpg" alt=""></a></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_57.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="./index_art.html">娛樂/電影</a></div>
+                                                <div class="trends_category"><a href="#">體育/籃球</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="./correct.html">侯孝賢獲紐時大篇幅介紹：台灣最偉大電影人</a></div>
+                                                    <div class="trends_name"><a href="product.html">解封／WSBL6月11日起開放進場 進場須戴口罩採實名制登記</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -403,35 +399,35 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_34.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><a href="./correct.html"><img src="images/yahoo/new_p_28.jpg" alt=""></a></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">娛樂/歐美</a></div>
+                                                <div class="trends_category"><a href="./index_sport.html">體育/籃球</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">女神卡卡攜手亞莉安娜 新歌MV日破1600萬人次觀看</a></div>
+                                                    <div class="trends_name"><a href="./correct.html">NBA／坦承人生因喬丹而改變 柯爾：我欠他太多太多</a></div>
                                                 </div>
                                             </div>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
                                         </div>
                                     </div>
                                     <div class="owl-item">
-                                        <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_45.jpg" alt=""></div>
+                                        <div class="trends_item">
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_59.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">娛樂/影視名人</a></div>
+                                                <div class="trends_category"><a href="#">體育/籃球</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">專訪／陳郁秀為貝多芬拾琴鍵 公廣集團董座的浪漫與理性</a></div>
+                                                    <div class="trends_name"><a href="product.html">HBL男乙／高師附中蔣岱佑末節逆襲衛冕軍東中 竹林興華新化同捷</a></div>
                                                 </div>
                                             </div>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
                                         </div>
                                     </div>
                                     <div class="owl-item">
-                                        <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_46.jpg" alt=""></div>
+                                        <div class="trends_item">
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_58.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">娛樂/電影</a></div>
+                                                <div class="trends_category"><a href="#">體育/籃球</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">睽違29年影史上驚悚鉅作《沉默的羔羊》4K修復版重返大螢幕</a></div>
+                                                    <div class="trends_name"><a href="product.html">HBL乙級／小港三分雨淋南商輕闖衛冕頭關 黑馬竹商能仁龍津同日傳捷</a></div>
                                                 </div>
                                             </div>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
@@ -440,13 +436,12 @@
                                 </div>
                             </div>
                         </div>
-                    </div>                   
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 <!-- Copyright -->
-
 	<div class="copyright">
 		<div class="container">
 			<div class="row">
