--- a/index.html
+++ b/index.html
@@ -347,7 +347,6 @@
                                             </div>
                                             <ul class="trends_marks">
                                                 <li class="trends_mark trends_discount">-25%</li>
-                                                <li class="trends_mark trends_new">HOT</li>
                                             </ul>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
                                         </div>
@@ -359,7 +358,7 @@
                                             <div class="trends_content">
                                                 <div class="trends_category"><a href="#">國際/國際大事</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">香港發起「反惡歌法」大遊行，港警舉旗射煙霧彈驅離</a></div>
+                                                    <div class="trends_name"><a href="product.html">香港發起反惡歌法遊行，港警舉旗射煙霧彈驅離</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
