--- a/index2.html
+++ b/index2.html
@@ -151,7 +151,7 @@
 								</ul>
 				            </li>
                             <li class="hassubs">
-								<a href="../News/index2_location.html">社會地方<i class="fas fa-chevron-right"></i></a>
+								<a href="../News/index2_location.html">地方<i class="fas fa-chevron-right"></i></a>
 								<ul>
 								    <li><a href="#">大台北<i class="fas fa-chevron-down"></i></a></li>
 								    <li><a href="#">北台灣<i class="fas fa-chevron-down"></i></a></li>
@@ -219,8 +219,6 @@
                             </li>
                             <li class="hassubs"><a href="contact.html">影音</a>
                             </li>
-                            <li class="hassubs"><a href="../News/index2_covid19.html"><i class="fas fa-hospital"></i>新冠病毒</a>
-                            </li>
 				        </ul>								
 				    </div>
 					<div class="menu_trigger_container ml-auto">
@@ -258,8 +256,7 @@
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
-                                                <li class="trends_mark trends_discount">-25%</li>
-                                                <li class="trends_mark trends_new">HOT</li>
+                                                <li class="trends_mark trends_discount">-25%</li> 
                                             </ul>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
                                         </div>
