--- a/index4.html
+++ b/index4.html
@@ -165,7 +165,7 @@
 								</ul>
 				            </li>
                             <li class="hassubs">
-								<a href="../News/index4_location.html">社會地方<i class="fas fa-chevron-right"></i></a>
+								<a href="../News/index4_location.html">地方<i class="fas fa-chevron-right"></i></a>
 								<ul>
 								    <li><a href="#">大台北<i class="fas fa-chevron-down"></i></a></li>
 								    <li><a href="#">北台灣<i class="fas fa-chevron-down"></i></a></li>
@@ -232,8 +232,6 @@
                             <li class="hassubs"><a href="../News/index4_weather.html">天氣</a>
                             </li>
                             <li class="hassubs"><a href="contact.html">影音</a>
-                            </li>
-                            <li class="hassubs"><a href="../News/index4_covid19.html"><i class="fas fa-hospital"></i>新冠病毒</a>
                             </li>
 				        </ul>								
 				    </div>
