--- a/index4.html
+++ b/index4.html
@@ -77,7 +77,7 @@
 							<div class="header_search_content">
 								<div class="header_search_form_container">
 									<form action="#" class="header_search_form clearfix">
-										<input type="search" required="required" class="header_search_input" placeholder="搜尋新聞標題與關鍵字">
+										<input type="search" required="required" class="header_search_input" placeholder="搜尋新聞標題與關鍵字"><!-- 
 										<div class="custom_dropdown">
 											<div class="custom_dropdown_list">
 												<span class="custom_dropdown_placeholder clc">所有類別</span>
@@ -92,7 +92,7 @@
 													<li><a class="clc" href="#">娛樂</a></li>
 												</ul>
 											</div>
-										</div>
+										</div> -->
 										<button type="submit" class="header_search_button trans_300" value="Submit"><img src="images/search.png" alt=""></button>
 									</form>
 								</div>
