--- a/title20_nonpretext.html
+++ b/title20_nonpretext.html
@@ -371,11 +371,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_36.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_5.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">健康/憂鬱症</a></div>
+                                                <div class="trends_category"><a href="#">生活/文教資訊</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">憂鬱症五大類型與常見症狀，3分鐘檢測憂鬱指數</a></div>
+                                                    <div class="trends_name"><a href="product.html">和敦南誠品說拜拜 民眾徹夜未眠重溫回憶</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
