--- a/title24_nonpretext.html
+++ b/title24_nonpretext.html
@@ -371,11 +371,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/photo4.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_5.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">財經/2020報稅</a></div>
+                                                <div class="trends_category"><a href="#">生活/文教資訊</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">免結算申報標準大公開，年收40.8萬以下免繳稅</a></div>
+                                                    <div class="trends_name"><a href="product.html">和敦南誠品說拜拜 民眾徹夜未眠重溫回憶</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
