--- a/title24_pretext.html
+++ b/title24_pretext.html
@@ -384,16 +384,16 @@
                                         </div>
                                     </div>
                                     <!-- Trends Slider Item -->
-                                    <div class="owl-item">
+                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/photo4.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_5.jpg" alt=""></div>
                                             <div class="trends_content" style="margin-top:5%">
-                                                <div class="trends_category"><a href="#">財經/2020報稅</a></div>
+                                                <div class="trends_category"><a href="#">生活/文教資訊</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">免結算申報標準大公開，年收40.8萬以下免繳稅</a></div>
+                                                    <div class="trends_name"><a href="product.html">和24小時書店敦南誠品說拜拜 民眾徹夜未眠重溫回憶</a></div>
                                                 </div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="review_text">財政部國稅局指出，只要年所得未達免稅額及標準扣除額合計數，在未列報爸媽等扶養親屬之，單身族年收入在20.8萬元、有配偶41.6萬元以下...</div>
+                                                    <div class="review_text">全台唯一的24小時書店敦南誠品將在今（31日）熄燈，誠品舉辦一系列藝文展演與熄燈紀念活動，自上週五開始就湧入民眾參與活動，要和敦...</div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
